tolk-tester/tests/invalid-syntax/err-3044.tolk
fun main(flags: int) {
    return flags << 1 + 32;
}

/**
@compilation_should_fail
@stderr << has lower precedence than +
*/
